--- a/index.html
+++ b/index.html
@@ -2751,12 +2751,12 @@
              launchViz(3);
              vHeight = 1200;
             launchViz(4);
-        vHeight = 800;
-        vHideToolbar=true;
-            vHideTabs= true;
-        launchViz(5);
-        vHeight = 1200;
-        launchViz(6);
+        // vHeight = 800;
+        // vHideToolbar=true;
+        //     vHideTabs= true;
+        // launchViz(5);
+        // vHeight = 1200;
+        // launchViz(6);
         // vHeight = 1300;
         // launchViz(7);
         // vHeight = 8000;
@@ -4301,22 +4301,7 @@
                                             <div id="vizContainer4"></div>
                                         </div>
                                     </div>
-                                    <div style="text-align: center;">
-                                        <div style="display: inline-block;">
-                                            <p> - </p>
-                                            <p> Exemplo de um template para uso interno. Customizado para sua empresa </p>
-                                            <p> - </p>
-                                            <div id="vizContainer5"></div>
-                                        </div>
-                                    </div>
-                                    <div style="text-align: center;">
-                                        <div style="display: inline-block;">
-                                            <p> - </p>
-                                            <p> Exemplo do uso do template. Customizado para sua empresa </p>
-                                            <p> - </p>
-                                            <div id="vizContainer6"></div>
-                                        </div>
-                                    </div>
+                                    
 
 
 
